--- a/index.html
+++ b/index.html
@@ -35,40 +35,11 @@
 			<hr>
 		</div>
 
-		<stori-book pages='[
-		{ 
-			"title": "Page1",
-			"src": "page1.html"
-		},
-		{
-			"title": "Page2",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page3",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page4",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page5",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page5",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page5",
-			"src": "page2.html"
-		},
-		{
-			"title": "Page5",
-			"src": "page2.html"
-		}
-		]'></stori-book>
+		<stori-book>
+			<stori-page title="page1" src="page1.html"></stori-page>
+			<stori-page title="page2" src="page2.html"></stori-page>	
+			<stori-page title="page3" src="page3.html"></stori-page>
+		</stori-book>
 	</div>
 	THERE"S SOMETHIGN HERE Top-Down
 	<h2>hhh</h2>
