Working well, going to mess with css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<stori-book>
-			<stori-page title="page1" src="page1.html"></stori-page>
+			<stori-page title="Very long title to see how it fits into the space given." src="page1.html"></stori-page>
 			<stori-page title="page2" src="page2.html"></stori-page>	
 			<stori-page title="page3" src="page3.html"></stori-page>
 		</stori-book>
