--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		</div>
 
 		<stori-book>
-			<stori-page title="Very long title to see how it fits into the space given." src="page1.html"></stori-page>
-			<stori-page title="page2" src="page2.html"></stori-page>	
-			<stori-page title="page3" src="page3.html"></stori-page>
+			<stori-page title="Very long title to see how it fits into the space given." src="page1.html">Page1</stori-page>
+			<stori-page title="page2" src="page2.html">Page2</stori-page>	
+			<stori-page title="page3" src="page3.html">Page3</stori-page>
 		</stori-book>
 	</div>
 	THERE"S SOMETHIGN HERE Top-Down
