added vh changed

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 			<hr>
 		</div>
 
-		<stori-book>
+		<stori-book menu-width="200px" >
 			<stori-page title="Very long title to see how it fits into the space given." src="page1.html">Page1</stori-page>
 			<stori-page title="page2" src="page2.html">Page2</stori-page>	
 			<stori-page title="page3" src="page3.html">Page3</stori-page>
 		</stori-book>
 	</div>
-	THERE"S SOMETHIGN HERE Top-Down
-	<h2>hhh</h2>
+	THERE"S SOMETHING HERE at the footer. 
+	<h2>TESTING</h2>
 </body>
 
 </html>
