seems done for now

--- a/G148/Guidebook4A.html
+++ b/G148/Guidebook4A.html
@@ -64,6 +64,14 @@
                 <stori-page title="Earthquakes" icon="/shared/svg/book.svg" src="pages/1-earthquakes.html">Page1</stori-page>
                 <stori-page title="Famous Earthquakes of the Pacific Northwest" icon="/shared/svg/video.svg" src="pages/2-famousEarthquakes.html">Page2</stori-page>	
                 <stori-page title="PNW Earthquake Sources" icon="/shared/svg/book.svg" src="pages/3-pnwEarthquakeSources.html">Page3</stori-page>
+                <stori-page title="Check Your Knowledge 4.1" icon="/shared/svg/self_check.svg" src="pages/4-checkYourKnowledge4-1.html">Page4</stori-page>
+                <stori-page title="Case Studies" icon="/shared/svg/book.svg" src="pages/5-caseStudies.html">Page5</stori-page>
+                <stori-page title="Famous Earthquakes of the World (10:40)" icon="/shared/svg/video.svg" src="pages/6-famousEarthquakesOfTheWorld.html">Page6</stori-page>
+                <stori-page title="Check Your Knowledge 4.2" icon="/shared/svg/self_check.svg" src="pages/7-checkYourKnowledge4-2.html">Page7</stori-page>
+                <stori-page title="What is an Earthquake?" icon="/shared/svg/book.svg" src="pages/8-whatIsAnEarthquake.html">Page8</stori-page>
+                <stori-page title="What is an Earthquake? (17:28)" icon="/shared/svg/video.svg" src="pages/9-whatIsAnEarthquake.html">Page9</stori-page>
+                <stori-page title="Check Your Knowledge 4.3" icon="/shared/svg/self_check.svg" src="pages/10-checkYourKnowledge4-3.html">Page10</stori-page>
+                
             </stori-book>
 
 
