--- a/CH151/index.html
+++ b/CH151/index.html
@@ -18,6 +18,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 	<link rel="stylesheet" href="/ableplayer/build/ableplayer.min.css" type="text/css">
 	<script src="/ableplayer/build/ableplayer.min.js"></script>
+
+	<script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
 	<!-- <script src="src/test.js"></script> -->
 	<script src="../dist/bundle.js"></script>
 </head>
