--- a/CH151/index.html
+++ b/CH151/index.html
@@ -3,23 +3,32 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 
 	<!-- Font Awesome CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"> -->
 
 
 	<!-- <link rel="stylesheet" href="src/STORIBook.css" /> -->
 	<link rel="stylesheet" href="./presentAble.css" type="text/css"/>
 	<link rel="stylesheet" href="./presentAbleAster.css" type="text/css"/>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
-	<link rel="stylesheet" href="/ableplayer/build/ableplayer.min.css" type="text/css">
-	<script src="/ableplayer/build/ableplayer.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script> -->
+	<!-- <link rel="stylesheet" href="/ableplayer/build/ableplayer.min.css" type="text/css"> -->
+	<!-- <script src="/ableplayer/build/ableplayer.min.js"></script> -->
+	<link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet">
+	<link rel="stylesheet" href="../videojs/videojs-accessibility.css"/>
+
+	<script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+
+	
+	<script module src="../videojs/videojs-accessibility.js"></script>
+
 	<!-- <script src="src/test.js"></script> -->
 	<script src="../dist/bundle.js"></script>
+
 </head>
 
 <body>
@@ -43,7 +52,7 @@
 
 		<stori-book 
 			aspectRatio="1.777"
-			video="https://cdnapisec.kaltura.com/p/823192/sp/0/playManifest/entryId/1_vn9gu97a/format/url/protocol/https/flavorParamId/0/a.mp4"
+			video="https://cdnapisec.kaltura.com/p/823192/sp/0/playManifest/entryId/1_vn9gu97a/format/applehttp/protocol/https/a.m3u8"
 			captions="./1_vn9gu97a.vtt" 
 			chapters="./1_vn9gu97a.chap.vtt" 
 			metadata="./1_vn9gu97a.meta.vtt" 
