--- a/CH151/week-01/index.html
+++ b/CH151/week-01/index.html
@@ -22,7 +22,7 @@
 <body> 
 
 	<div class="container-fluid">
-		<div class="col-12 banner-img"><img src="/content/enforced/393165-ch151_stori_dev_ou/week-01/img/banner.jpg"
+		<div class="col-12 banner-img"><img src="./img/banner.jpg"
 				alt="" title="" style="max-width: 100%;" data-d2l-editor-default-img-style="true"></div>
 		<div class="col-sm-10 offset-sm-1">
 			<h1>Intro to Chemistry &amp; the Scientific Method</h1>
