--- a/Presentables/week-01/pages/page01.html
+++ b/Presentables/week-01/pages/page01.html
@@ -1,4 +1,4 @@
-<svg mlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1080">
+<svg mlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1080" preserveAspectRatio="xMinYMin meet">
     <defs> </defs>
     <g id="Background">
         <rect class="as-back" width="1920" height="1080"> </rect>
