--- a/Presentables/week-01/index.html
+++ b/Presentables/week-01/index.html
@@ -23,7 +23,7 @@
 <body>
 
 	<div class="container-fluid">
-		<div class="col-12 banner-img"><img src="./img/banner.jpg" alt="" title="" style="max-width: 100%;"
+		<div class="col-12 banner-img"><img src="img/banner.jpg" alt="" title="" style="max-width: 100%;"
 				data-d2l-editor-default-img-style="true"></div>
 		<div class="col-sm-10 offset-sm-1">
 			<h1>Intro to Chemistry &amp; the Scientific Method</h1>
@@ -39,35 +39,48 @@
 			<hr>
 		</div>
 
-		<stori-book> 
-			<video slot="video" class='video-js' controls='controls'
-				data-setup='{ "playbackRates": [0.5, 1, 1.5, 2], "controlBar": {"pictureInPictureToggle":false, "captions":false}}'
-				data-able-player preload="auto" data-transcript-div="transcript" height="auto">
-				<source
-					src="https://cdnapisec.kaltura.com/p/823192/sp/0/playManifest/entryId/1_vn9gu97a/format/applehttp/protocol/https/a.m3u8"
-					type="application/x-mpegURL">
-				<track kind="captions" src="1_vn9gu97a.vtt" srclang="en" label="English" default>
-				<track kind="metadata" src="1_vn9gu97a.meta.vtt">
-				<track kind="chapters" src="1_vn9gu97a.chap.vtt">
-			</video>
-			<div slot="transcript" id="transcript"></div>
-			<stori-page title="Learning Objectives" src="pages/page01.html">Page 1</stori-page>
-			<stori-page title="What is Science?" src="pages/page02.html">Page 2</stori-page>
-			<stori-page title="What is Chemistry?" src="pages/page03.html">Page 3</stori-page>
-			<stori-page title="The Scientific Method" src="pages/page04.html">Page 4</stori-page>
-			<stori-page title="A Practical Example of the Scientific Method" src="pages/page05.html">Page 5</stori-page>
-			<stori-page title="A Chemical Example of the Scientific Method" src="pages/page06.html">Page 6</stori-page>
-			<stori-page title="Theory vs. Law" src="pages/page07.html">Page 7</stori-page>
-			<stori-page title="An Example- Gravitation" src="pages/page08.html">Page 8</stori-page>
-			<stori-page title="An Example from Chemistry" src="pages/page09.html">Page 9</stori-page>
-			<stori-page title="Knowledge Check 1.1" src="pages/page10.html">Page 10</stori-page>
-			<stori-page title="Experiments" src="pages/page11.html">Page 11</stori-page>
-			<stori-page title="Variables" src="pages/page12.html">Page 12</stori-page>
-			<stori-page title="Examples of variables in an Experiment" src="pages/page13.html">Page 13</stori-page>
-			<stori-page title="Types of Data from Experiments" src="pages/page14.html">Page 14</stori-page>
-			<stori-page title="Knowledge Check 1.2" src="pages/page15.html">Page 15</stori-page>
-		</stori-book>
+		<div class="col-12">
+			<stori-book>
+				<video slot="video" class='video-js' controls='controls'
+					data-setup='{ "playbackRates": [0.5, 1, 1.5, 2], "controlBar": {"pictureInPictureToggle":false, "captions":false}}'
+					data-able-player preload="auto" data-transcript-div="transcript" height="auto">
+					<source
+						src="https://cdnapisec.kaltura.com/p/823192/sp/0/playManifest/entryId/1_vn9gu97a/format/applehttp/protocol/https/a.m3u8"
+						type="application/x-mpegURL">
+					<track kind="captions" src="1_vn9gu97a.vtt" srclang="en" label="English" default>
+					<track kind="metadata" src="1_vn9gu97a.meta.vtt">
+					<track kind="chapters" src="1_vn9gu97a.chap.vtt">
+				</video>
+				<div slot="transcript" id="transcript"></div>
+				<stori-page title="Learning Objectives" src="pages/page01.html">Page 1</stori-page>
+				<stori-page title="What is Science?" src="pages/page02.html">Page 2</stori-page>
+				<stori-page title="What is Chemistry?" src="pages/page03.html">Page 3</stori-page>
+				<stori-page title="The Scientific Method" src="pages/page04.html">Page 4</stori-page>
+				<stori-page title="A Practical Example of the Scientific Method" src="pages/page05.html">Page
+					5</stori-page>
+				<stori-page title="A Chemical Example of the Scientific Method" src="pages/page06.html">Page
+					6</stori-page>
+				<stori-page title="Theory vs. Law" src="pages/page07.html">Page 7</stori-page>
+				<stori-page title="An Example- Gravitation" src="pages/page08.html">Page 8</stori-page>
+				<stori-page title="An Example from Chemistry" src="pages/page09.html">Page 9</stori-page>
+				<stori-page title="Knowledge Check 1.1" src="pages/page10.html">Page 10</stori-page>
+				<stori-page title="Experiments" src="pages/page11.html">Page 11</stori-page>
+				<stori-page title="Variables" src="pages/page12.html">Page 12</stori-page>
+				<stori-page title="Examples of variables in an Experiment" src="pages/page13.html">Page 13</stori-page>
+				<stori-page title="Types of Data from Experiments" src="pages/page14.html">Page 14</stori-page>
+				<stori-page title="Knowledge Check 1.2" src="pages/page15.html">Page 15</stori-page>
+			</stori-book>
+		</div>
+
+		<div id="footer" class="col-sm-10 offset-sm-1">
+			<hr>
+			<h2>Additional Heading</h2>
+			Additional Content<footer>
+				<p>footer</p>
+			</footer>
+		</div>
 	</div>
+
 
 </body>
 
