fixed an error in one page but not the audio :(

--- a/week-06/pages08/page09.html
+++ b/week-06/pages08/page09.html
@@ -1194,4 +1194,16 @@
             </g>
         </g>
     </g>
+    <g id="g670" inkscape:label="errorCorrection" transform="translate(-789.20245,-418.15951)">
+        <rect style="fill:#f9f9f9;stroke:#1a1a1a;stroke-width:1.13386" id="rect667" width="444.66266" height="113.37423"
+            x="1027.7301" y="702.3313" />
+        <text xml:space="preserve"
+            style="font-size:26.6667px;font-family:'Segoe UI';-inkscape-font-specification:'Segoe UI';text-align:start;writing-mode:lr-tb;direction:ltr;text-anchor:start;fill:#ff0000;stroke:#ff0000;stroke-width:1.13386"
+            x="1035.092" y="752.39258" id="text667">
+            <tspan sodipodi:role="line" id="tspan667" x="1035.092" y="752.39258"
+                style="font-size:26.6667px;fill:#ff0000;stroke:#ff0000">Narrator mistake! Group 16 (6A) </tspan>
+            <tspan sodipodi:role="line" x="1035.092" y="785.72595" id="tspan668"
+                style="font-size:26.6667px;fill:#ff0000;stroke:#ff0000">non-metals always GAIN 2 electrons!</tspan>
+        </text>
+    </g>
 </svg>
